<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:id="@+id/contact_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="@dimen/spaces_around_fragment"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contact_header"
                style="@style/Contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_detail_info"
                app:layout_constraintBottom_toTopOf="@+id/contact_image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/contact_image"
                style="@style/Contact.Photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="4dp"
                android:contentDescription="@string/contact_s_image"
                android:src="@drawable/nophoto"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_header" />



            <TextView
                android:id="@+id/contact_name"
                style="@style/Contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contact_image" />

            <TextView
                android:id="@+id/contact_number"
                style="@style/Contact.Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_375_29_1234567"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_name" />

            <TextView
                android:id="@+id/contact_mail"
                style="@style/Contact.Mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_mail_com"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_number" />

            <TextView
                android:id="@+id/contact_remark"
                style="@style/Contact.Remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remarks_for_contact"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_mail" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_high" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>